<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Location Reminder App</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="geofence_title">Geofence</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="reminder_deleted">Reminder Deleted !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the Location Reminder App</string>
    <string name="login">SIGN IN</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>

    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="geofence_notification_title">Geofence Alert</string>
    <string name="geofence_notification_text">You are near %s</string>


    <!--    Login strings-->
    <string name="login_button_text">SIGN IN</string>
    <string name="logout_button_text">SIGN OUT</string>
    <string name="login_unsuccessful_msg">Sign in unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Sign in to set customizations!</string>
    <string name="login_btn">SIGN IN</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_reset_pin">forgot pin</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>

    <string name="aspindale_hint">Go home and rest</string>
    <string name="aspindale_location">Aspindale park is an awesome place to get some rest</string>

    <string name="warren_park_hint">Go home and rest</string>
    <string name="warren_park_location">Warren park D is an awesome place to do your work</string>

    <string name="aspindale_street_hint">Go home and rest</string>
    <string name="aspindale_street_location">Warren park D is an awesome place to do your work</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="geofences_not_removed">Geofences not removed.</string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>
    <string name="done">Done</string>
    <string name="channel_description">Notifications for My App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">VIEW</string>
    <string name="delete_reminder">Delete Location</string>

</resources>

